# Hexis

./: .gitignore  .tmp_termination_patch.sql  AGENTS.md  Dockerfile  PHILOSOPHY.md  README.md  agi_init.py  architecture.md  docker-compose.yml  docker-compose.yml.bak  pyproject.toml  pytest.ini  rxconfig.py  schema.sql  test.py  test_plan.md  worker.py
ToDo/: DeliberateTransformationTODO.md  Emotions.md  EnhanceDBTestsTODO.md  InitializationExperience.md
apps/: hexis_mcp_server.py
assets/: port_discovery.js
core/: agent_api.py  chat.py  cognitive_memory_api.py  consent.py  ingest.py  ingest_api.py  llm.py  memory_tools.py  sync_utils.py  tooling.py
db/: 00_tables.sql  01_indices.sql  02_functions_deliberate_transformation.sql  03_functions_helpers.sql  04_functions_core.sql  05_functions_provenance_trust.sql  06_functions_graph_helpers.sql  07_functions_heartbeat.sql  08_functions_goals.sql  09_functions_context.sql  10_functions_initialization.sql  11_functions_core_heartbeat.sql  12_functions_boundaries.sql  13_functions_emotional_state.sql  14_functions_neighborhood_recompute.sql  15_functions_graph_enhancements.sql  16_functions_reflect_pipeline.sql  17_functions_subconscious_observations.sql  18_functions_tip_of_tongue.sql  90_views.sql  91_triggers.sql  92_comments.sql  schema.sql
docs/: ACTION_COST.md  INIT_FLOW.md  SELF_DEVELOPMENT.md  architecture-philosophy-bridge.md  architecture.md  test_plan.md
hexis-ui/: README.md  package.json  playwright.config.ts  vitest.config.ts
ops/: Dockerfile.worker  db-manage.sh
services/: chat.py  external_calls.py  (+3 more)
(+58 files in other folders)
